modificada la maquetacion de la calculadora

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			</div>
 			<div id="operators">
 				<div class="row">
-					<div id="buttoǹ+" class="button">+</div>
+					<div id="button+" class="button">+</div>
 				</div>
 				<div class="row">
 					<div id="button/" class="button">/</div>
