Inserting numbers into result

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<div id="calc">
-		<div id="result">412190280192</div>
+		<div id="result"></div>
 		<div id="buttons">
 			<div id="numbers">
 				<div class="row">
